--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
@@ -19,13 +19,12 @@
 .centered-and-cropped {
    object-fit: cover
 }
-.inline-button-input {
+/*.inline-button-input {
   display: inline-block;
   border-radius: 0.15em;
   border: 1px solid lightgray;
-
 }
 
 .button-add-del {
   border-radius: 25em !important;
-}
+}*/
