--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -232,3 +232,9 @@ table {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.cart-crop {
+  width: 100%;
+  height: 70px;
+  overflow: hidden !important;
+}
