--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -5,10 +5,12 @@
       <a *ngIf="item !== 'undefined'" [routerLink]="[item.url]">{{item.label}}</a>
 
     </li>
-    <div *ngIf="breadList.length > 2 && breadList[2].label.includes('Consumer')"  class="ml-auto cursor-pointer" (click)="viewCart()" style="margin-right:21px">
+    <div *ngIf="breadList.length > 2 && breadList[2].label.includes('Consumer')" class="ml-auto my-auto cursor-pointer" (click)="viewCart()" style="margin-right:21px">
       <a *ngIf="cart.length === 0">Your cart <b class="text-info">is empty</b>! </a>
-      <a routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0">There {{cart.length === 1 ? 'is' : 'are'}} <b class="text-info">{{cart.length}} item{{cart.length === 1 ? '' : 's'}}</b> in your cart. Checkout now! </a>
-      <i routerLink="/reserved-area/consumer/cart" style="font-size: 1.5em !important;" class="fas fa-shopping-cart" ></i>
+      <a class="text-dark" routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0">
+        There {{cart.length === 1 ? 'is' : 'are'}} <b class="text-info">{{cart.length}} item{{cart.length === 1 ? '' : 's'}}</b> in your cart. Checkout now!
+        <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
+      </a>
     </div>
   </ol>
 
