del unused variables

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -83,7 +83,7 @@
           <span (click)="data.changeMessage(!hide)" class="menu-collapsed">Payment details</span>
         </a>
         <a class="list-group-item list-group-item-action text-secondary">
-          <span (click)="message = 'hide'" class="menu-collapsed">Receipts</span>
+          <span (click)="data.changeMessage(!hide)"  class="menu-collapsed">Receipts</span>
         </a>
       </div>
     </div>
@@ -105,7 +105,5 @@
     </a>
   </ul>
   <!-- List Group END-->
-  <!--</div>-->
 </div>
-<!--</div>-->
 </div>
