--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,7 @@
 <!-- TODO Impostare navbar personalizzate se utente è loggato o meno -->
 
 <!-- If user is not logged in-->
+
 <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top col-12">
   <button type="button" id="sidebarCollapse" class="navbar-toggler col-2" (click)="showSideBar()">
     <span class="navbar-toggler-icon"></span>
@@ -9,13 +10,13 @@
 
 
 
-  <a class="navbar-brand col-2" href="#">
+
     <picture>
-      <source media="(min-width: 720px)" srcset="assets/img/brand/sardcoin-logo.png">
-      <source media="(min-width: 480px)" srcset="assets/img/brand/sardcoin-logo-small.png">
-      <img src="assets/img/brand/sardcoin-logo-small.png" alt="noImage">
+      <source media="(min-width: 760px)" srcset="assets/img/brand/sardcoin-logo.png">
+      <source media="(min-width: 200px)" srcset="assets/img/brand/sardcoin-logo-small.png">
+      <img class="center" src="assets/img/brand/sardcoin-logo-small.png" alt="noImage">
     </picture>
-  </a>
+
 
   <button class="navbar-toggler col-2" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
