--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,22 +2,29 @@
 
 <!-- If user is not logged in-->
 
+<!--*********per desktop********************-->
+
+
 <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top col-12">
   <button type="button" id="sidebarCollapse" class="navbar-toggler col-2" (click)="showSideBar()">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-    <picture>
-      <source media="(min-width: 760px)" srcset="assets/img/brand/sardcoin-logo.png">
-      <source media="(min-width: 200px)" srcset="assets/img/brand/sardcoin-logo-small.png">
-      <img class="center" src="assets/img/brand/sardcoin-logo-small.png" alt="noImage">
-    </picture>
+  <picture >
+    <source media="(min-width: 768px)" srcset="assets/img/brand/sardcoin-logo.png">
+    <source media="(min-width: 200px)" srcset="assets/img/brand/sardcoin-logo-small.png">
+    <img class="center" alt="noImage">
+  </picture>
 
 
-  <button class="navbar-toggler col-2" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon col-2"></span>
-  </button>
+  <img *ngIf="isUserLoggedIn" style="padding: 0px; max-width: 45px !important; height: auto"
+       class="nav-link navbar-toggler col-2" type="button" data-toggle="collapse"
+       data-target="#navbarNavDropdown"
+       data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
+       src="assets/img/avatars/8.jpg" alt="{{username}}">
+    <!--<span class="navbar-toggler-icon col-2"></span>-->
+
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
 
     <div *ngIf="!isUserLoggedIn">
@@ -34,13 +41,13 @@
     <div *ngIf="isUserLoggedIn" class="ml-auto">
       <ul class="nav navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+          <a  *ngIf="isDesktop" class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
              aria-expanded="false">
             <i>Welcome back, <b>{{username}}</b>!</i>
             <!--<i class="fa fa-2x fa-user-tie"></i>-->
             <img class="img-avatar" src="assets/img/avatars/8.jpg" alt="{{username}}">
           </a>
-          <div class="dropdown-menu dropdown-menu-right">
+          <div class="dropdown-menu dropdown-menu-right float-right col-2">
             <div class="dropdown-header text-center">
               <strong class="text-capitalize">Settings</strong>
             </div>
