--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,7 +6,7 @@
 
 
 <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top col-12">
-  <button type="button" id="sidebarCollapse" class="navbar-toggler col-2" (click)="showSideBar()">
+  <button type="button" id="sidebarCollapse" class="navbar-toggler " (click)="showSideBar()">
     <span class="navbar-toggler-icon"></span>
   </button>
 
