--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
@@ -19,12 +19,8 @@
 .centered-and-cropped {
    object-fit: cover
 }
-/*.inline-button-input {
-  display: inline-block;
-  border-radius: 0.15em;
-  border: 1px solid lightgray;
-}
 
-.button-add-del {
-  border-radius: 25em !important;
-}*/
+.btn-info:hover {
+  background-color: white!important;
+  color: #63c2de!important;
+}
